@@ -1,6 +1,12 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for app-admin/wol-init
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*wol-init-0.4 (14 Feb 2011)
+
+  14 Feb 2011; Justin Lecher <jlec@gentoo.org> -wol-init-0.1.ebuild,
+  -wol-init-0.2.ebuild, +wol-init-0.4.ebuild, files/metadata.xml, metadata.xml:
+  Version Bump, cleaned old
 
 *<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)
 
